# UiTHack22

./: README.md
Crypto/: README.md
Crypto/Advanced_Engineering_Systems/: README.md  writeup.md
Crypto/Droid_Factory/: README.md  writeup.md
Crypto/Tango_With_Jango/: HEART.txt  README.md  message.txt  writeup.md
Crypto/Tantive_IV/: README.md  writeup.md
Crypto/Tusken_Painter/: README.md  writeup.md
Crypto/tmpname_ceasar/: README.md  writeup.md
Crypto/tmpname_freqanalysis/: README.md  testOop.py  writeup.md
Crypto/tmpname_list/: list.py  writeup.md
Crypto/tmpname_rijndael/: errmsg.txt
Crypto/tmpname_vigbase64/: README.md  message.txt  writeup.md
IRL/: README.md
IRL/Hoth Base Defence/: README.md  clue_to_pdf.odt  shift.py  writeup.md
Misc/: README.md
Misc/Boba_Fett/: README.md  writeup.md
Misc/Dimensions/: README.md  writeup.md
Misc/Help_the_crew_home/: README.md  writeup.md
Misc/Murder_Mystery/: README.md  logs.txt  writeup.md
Misc/exhaust/: README.md  writeup.md
Noob/: README.md
Pwn/: README.md  docker-compose.yml
Rev_Eng/: README.md
Rev_Eng/Massacre_aftermath/src/massacre_aftermath/: Cargo.toml
Rev_Eng/Massacre_aftermath/src/massacre_aftermath/.cargo/: config.toml
Rev_Eng/Massacre_aftermath/src/massacre_aftermath/src/: main.rs
Web/: README.md  docker-compose.yml
Web/Only_droids_allowed/src/only-droids/: Cargo.toml
Web/Only_droids_allowed/src/only-droids/src/: lib.rs  main.rs  server.rs
Web/Only_droids_allowed/src/only-droids/static/: style.css
Web/Only_droids_allowed/src/only-droids/templates/: index.html
(+145 files in other folders)
