[package]
name = "only-droids"
version = "0.1.0"
authors = ["steinar30 <steinarhansen352@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
parking_lot = "0.12"
env_logger = "0.9"
actix-session = "0.4.0"
tera = "1.6.1"
actix-files = "0.5"
